# probable-broccoli

./: .gitignore  .project  Cargo.toml  HOWTO-MAKE_JSON_FILES.md  README.md
Language Example Files WIP/: American_English.json  American_English_list.txt  Ancient_Greek.json  Gothic.json  Latin.json  Modern_Dutch.json  Old_English.json  Old_English_list.txt  Old_Frisian.json  Old_High_German.json  Old_Low_German.json  Old_Norse.json
Languages/: Afrikaans.json  Albanian.json  BCMS.json  Bulgarian.json  Generic_Romani.json  Gothic.json  Latvian.json  Macedonian.json  Nepali.json  Old_Czech.json  Old_English.json  Old_Irish.json  Old_Norse.json  Old_Polish.json  Russian.json  Slovak.json  Standard_Romani.json  Tocharian.json  Welsh.json
resource/: Icelandic-Norwegian.csv
src/: compare.rs  dendrogram.rs  ipa_mapping.rs  lib.rs  main.rs  model.rs  module-info.java
src/com/giggymantis/linguistics/: Lect.java  OrthographicWord.java  SimplePostconditionedSoundChange.java  SimplePreconditionedSoundChange.java  SimpleSoundChange.java  SimpleUnconditionedSoundChange.java  SoundChange.java  Word.java
src/com/giggymantis/phonetics/: ArticulationType.java  Lect.java  MethodOfArticulation.java  OrthographicWord.java  Phonation.java  Phone.java  Word.java
src/com/giggymantis/probable_broccoli/: Constants.java  FileLoader.java  Lect.java  Main.java  UtilsConstants.java
