[package]
name = "probable-broccoli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.4.2"
edit-distance = "2.1.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_arrays = "0.1.0"
