[package]
name = "probable-broccoli"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/GiggyMantis/probable-broccoli"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.196", features = ["derive"] }
serde_arrays = "0.1.0"
strsim = "0.11.0"
serde_json = "1.0.113"
regex = "1.10.3"
indicatif = "0.17.8"
simple-matrix = "0.1.2"
resvg = "0.40.0"
svg = "0.16.0"
